Fixed top spacing for home form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,7 +154,7 @@
      padding: 10px;
      position: absolute;
      right: 10%;
-     top: 11%;
+     top: 10.5%;
      border: 2px solid $white;
    }
    .client-message {
